<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#261C39"
    android:gravity="center_horizontal"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result_text"
        android:textColor="#E89110"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/image_tropy"
        android:src="@drawable/trophy" />

    <TextView
        android:id="@+id/tv_congrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/hey_congratulation_txt"
        android:textColor="#E89110"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username_txt"
        android:textColor="#E89110"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/score_txt"
        android:textColor="#E89110"
        android:textSize="20sp"/>
    
    <Button
        android:id="@+id/btn_fininsh"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"
        android:text="@string/finish_btn"
        android:textSize="18sp"
        android:textStyle="bold"/>
</LinearLayout>