<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#261C39"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quizapp_name"
        android:textColor="#E89110"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_gravity="center"
        app:strokeColor="#261740"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"

        app:cardElevation="18dp"
        app:cardBackgroundColor="#261C39">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_txt"
                android:textColor="#E89110"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/enter_un"
                android:textColor="#E89110"
                android:textSize="15sp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="#FF9800">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textColor="#AA385E">

                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnstart"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/btn_start"
                android:textSize="18sp"
                android:textColor="#FF9800">

            </Button>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
